--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,10 @@ license = "MIT"
 
 [tool.poetry.dependencies]
 python = "^3.8"
+plotly = "^5.4.0"
+pandas = "^1.3.4"
+black = "^21.12b0"
+isort = "^5.10.1"
 
 [tool.poetry.dev-dependencies]
 
