--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ plotly = "^5.4.0"
 pandas = "^1.3.4"
 black = "^21.12b0"
 isort = "^5.10.1"
+streamlit = "^1.3.0"
 
 [tool.poetry.dev-dependencies]
 
