--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "plotly-calplot"
+name = "plotly_calplot"
 version = "0.1.0"
 description = "Calendar Plot made with Plotly"
 authors = ["Bruno Rodrigues Silva <b.rosilva1@gmail.com>"]
@@ -9,11 +9,11 @@ license = "MIT"
 python = "^3.7.1"
 plotly = "^5.4.0"
 pandas = "^1.3.4"
-black = "^21.12b0"
-isort = "^5.10.1"
 streamlit = "^1.3.0"
 
 [tool.poetry.dev-dependencies]
+black = "^21.12b0"
+isort = "^5.10.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
