--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,11 @@
 [tool.poetry]
 name = "plotly_calplot"
-version = "0.1.0"
+version = "0.1.1"
 description = "Calendar Plot made with Plotly"
 authors = ["Bruno Rodrigues Silva <b.rosilva1@gmail.com>"]
 license = "MIT"
+repository = "https://github.com/brunorosilva/plotly-calplot"
+readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.7.1"
