--- a/setup.cfg
+++ b/setup.cfg
@@ -12,3 +12,32 @@ line_length = 90
 multi_line_output = 3
 include_trailing_comma = true
 use_parentheses = true
+
+[tool:pytest]
+norecursedirs = *.egg .eggs dist build docs .tox .git __pycache__
+testpaths = tests
+addopts =
+    --cov=plotly_calplot
+    --cov-report=html
+    --cov-report=xml
+    --cov-fail-under=80
+console_output_style = progress
+
+[coverage:html]
+title = Coverage Report
+
+[mypy]
+# suppress errors about unsatisfied imports
+ignore_missing_imports=True
+
+# be strict
+warn_return_any = True
+strict_optional = True
+warn_no_return = True
+warn_redundant_casts = True
+warn_unused_ignores = True
+disallow_any_generics = True
+
+disallow_untyped_defs = True
+check_untyped_defs = True
+disallow_untyped_calls = True
