--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -13,6 +13,10 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+    - name: Initialize Python 3.7
+      uses: actions/setup-python@v1
+      with: 
+        python-version: 3.7
       
     - name: Install dependencies
       run: make install
