--- a/.github/workflows/plotly_ci.yaml
+++ b/.github/workflows/plotly_ci.yaml
@@ -21,9 +21,9 @@ jobs:
       uses: actions/setup-python@v1
       with:
         python-version: 3.8
-  
+
     - name: Install Poetry
-      uses: dschep/install-poetry-action@v1.2
+      uses: snok/install-poetry@v1
 
     - name: Cache Poetry virtualenv
       uses: actions/cache@v1
@@ -36,7 +36,7 @@ jobs:
 
     - name: Install dependencies
       run: poetry install
-      
+
     - name: Run formatter
       run: make lint
 
