--- a/.github/workflows/plotly_ci.yaml
+++ b/.github/workflows/plotly_ci.yaml
@@ -40,7 +40,7 @@ jobs:
         run: make lint
 
       - name: Install missing stubs
-        run: mypy --install-types
+        run: mypy --install-types --non-interactive plotly_calplot
 
       - name: Run checks
         run: make checks
