Fix/update libs (#28)
* remove past dists

* fix pandas version to any

* fix pyproject version update

* remove get_date_coordinates params

* add fixes and docs for datetimes
---------

Co-authored-by: Bruno Rodrigues <b.rosilva1@gmail.com>

--- a/.github/workflows/plotly_ci.yaml
+++ b/.github/workflows/plotly_ci.yaml
@@ -39,6 +39,9 @@ jobs:
       - name: Run formatter
         run: make lint
 
+      - name: Run stubs install
+        run: make stubs
+
       - name: Run checks
         run: make checks
 
