--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "plotly_calplot"
-version = "0.1.16"
+version = "0.1.18"
 description = "Calendar Plot made with Plotly"
 authors = ["Bruno Rodrigues Silva <b.rosilva1@gmail.com>"]
 license = "MIT"
@@ -10,18 +10,19 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = ">=3.8,<4.0.0"
 plotly = "^5.4.0"
-pandas = "^1.0.5"
+pandas = "*"
 numpy = "^1.22.3"
+pytz = "^2023.3.post1"
 
-[tool.poetry.dev-dependencies]
+[tool.poetry.group.dev.dependencies]
 black = "^21.12b0"
 isort = "^5.10.1"
 streamlit = "^1.3.0"
 pytest = "^7.1.1"
 pytest-cov = "^3.0.0"
-mypy = "^0.942"
 flake8 = "^4.0.1"
 vulture = "^2.3"
+mypy = "^1.7.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
