--- a/.github/workflows/plotly_ci.yaml
+++ b/.github/workflows/plotly_ci.yaml
@@ -79,3 +79,12 @@ jobs:
           password: ${{ secrets.PLOTLY_DEV_TOKEN }}
           repository_url: https://test.pypi.org/legacy/
           verbose: true
+
+      - name: Publish distribution 📦 to PyPI
+        if: success()
+        uses: pypa/gh-action-pypi-publish@release/v1
+        with:
+          password: ${{ secrets.PLOTLY_PRD_TOKEN }}
+          repository_url: https://upload.pypi.org/legacy/
+          verbose: true
+  
