--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "plotly_calplot"
-version = "0.1.20"
+version = "0.1.21+cylinderStudio"
 description = "Calendar Plot made with Plotly"
 authors = ["Bruno Rodrigues Silva <b.rosilva1@gmail.com>"]
 license = "MIT"
