--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,12 +15,12 @@ numpy = "^1.22.3"
 pytz = "^2023.3.post1"
 
 [tool.poetry.group.dev.dependencies]
-black = "^21.12b0"
+black = "^24.0"
 isort = "^5.10.1"
 streamlit = "^1.3.0"
 pytest = "^7.1.1"
 pytest-cov = "^3.0.0"
-flake8 = "^4.0.1"
+flake8 = "^5.0.0"
 vulture = "^2.3"
 mypy = "^1.7.1"
 
